// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoGridHeder renders with empty string header 1`] = `
<div
  className="video-grid-header"
>
  <span
    className="title"
  />
</div>
`;

exports[`VideoGridHeder renders with title 1`] = `
<div
  className="video-grid-header"
>
  <span
    className="title"
  >
    Autos & Vehicles
  </span>
</div>
`;

exports[`VideoGridHeder renders without props 1`] = `
<div
  className="video-grid-header"
>
  <span
    className="title"
  />
</div>
`;
